--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>15</source>
+          <target>15</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -117,6 +118,10 @@
         <configuration>
           <includePluginDependencies>true</includePluginDependencies>
           <mainClass>home.test.MainApp</mainClass>
+          <commandlineArgs>--enable-preview</commandlineArgs>
+          <arguments>
+            <argument>--enable-preview</argument>
+          </arguments>
         </configuration>
       </plugin>
 
