--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<!-- <scope>system</scope>  -->
 			<!-- <systemPath>${project.basedir}/lib/ojdbc11.jar</systemPath>  -->
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.18.jre7</version>
+		</dependency>
 
 		<!-- logging -->
 		<dependency>
