--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
 			<version>21.1.0.0</version>
-			<!-- <scope>system</scope>  -->
-			<!-- <systemPath>${project.basedir}/lib/ojdbc11.jar</systemPath>  -->
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/ojdbc11.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
